Clearing all code
