# src/v1/routes/classRoutes.js
@@ -2,7 +2,7 @@ const express = require("express");
 const router = express.Router();
 const classController = require("../../controllers/classController");
 const passport = require('passport');
-const sendMail = require('../../services/sendMail');
+const sendMail = require('../../services/emailService');
 
 
 
@@ -20,19 +20,7 @@ router
   .patch("/:classId/leave/:userId", passport.authenticate('jwt', { session: false }), classController.leaveClass)
   .patch("/:classId/deleteFlow/:flowId", passport.authenticate('jwt', { session: false }), classController.deleteFlowFromClass)
   .delete("/:classId", passport.authenticate('jwt', { session: false }), classController.deleteClase)
-  .post('/join/:classId', passport.authenticate('jwt', { session: false }),classController.joinClass)
-  .post('/send-invite', async (req, res) => {
-    const { recipientEmails, className, classId } = req.body;
-    const inviteLink = `${classId}`;
-    try {
-        await Promise.all(recipientEmails.map(email => {
-            return sendMail.sendInviteEmail(email, className, inviteLink);
-        }));
-        res.status(200).send({ message: 'Invitations sent successfully' });
-    } catch (error) {
-        res.status(500).send({ message: 'Error sending invitations', error: error.message });
-    }
-});
+  .post('/join/:classId', passport.authenticate('jwt', { session: false }),classController.joinClass);
 
 
 module.exports = router;
